# days_and_knights

./: Cargo.toml  NOTES.md  README  TODO.md  ambient.toml
assets/characters/Barbarian/: Barbarian.gltf
assets/characters/Knight/: Knight.gltf
assets/characters/Mage/: Mage.gltf
assets/characters/Rogue/: Rogue.gltf
assets/skeletons/: Archer.glb  Minon.glb  Warrior.glb
assets/skeletons/Mage/: character_skeleton_mage.glb  character_skeleton_mage.gltf
src/: client.rs  hero.rs  server.rs  skeleton.rs
