[package]
name = "simple_viewer"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
# ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "bea63feb3fb5b4aa1b6f4a7c05abe55ce2c9d32f" }
ambient_api = { version = "0.3.0" }

[[bin]]
name = "simple_viewer_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "simple_viewer_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]